; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_git_configset_get_bool_or_int.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_git_configset_get_bool_or_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_set = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_configset_get_bool_or_int(%struct.config_set* %0, i8* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.config_set*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  store %struct.config_set* %0, %struct.config_set** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = load %struct.config_set*, %struct.config_set** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 @git_configset_get_value(%struct.config_set* %11, i8* %12, i8** %10)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %21, label %15

15:                                               ; preds = %4
  %16 = load i8*, i8** %7, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @git_config_bool_or_int(i8* %16, i8* %17, i32* %18)
  %20 = load i32*, i32** %9, align 8
  store i32 %19, i32* %20, align 4
  store i32 0, i32* %5, align 4
  br label %22

21:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %22

22:                                               ; preds = %21, %15
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @git_configset_get_value(%struct.config_set*, i8*, i8**) #1

declare dso_local i32 @git_config_bool_or_int(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
